--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
 dbg_hex = "0.2.0"
+env_logger = "0.11.3"
 libc = "0.2.153"
+log = "0.4.21"
 pci-driver = "0.1.4"
 thiserror = "1.0.58"
