--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
 dbg_hex = "0.2.0"
+deku = "0.16.0"
 env_logger = "0.11.3"
 libc = "0.2.153"
 log = "0.4.21"
