--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ clap = { version = "4.5.4", features = ["derive"] }
 dbg_hex = "0.2.0"
 deku = "0.16.0"
 env_logger = "0.11.3"
+irisc-asm = { git = "ssh://git@github.com/irisc-research-syndicate/irisc-asm.git", version = "0.1.0" }
 libc = "0.2.153"
 log = "0.4.21"
 pci-driver = "0.1.4"
